# glades-ml

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  INSTALL.md  README.md  docker-compose.yaml  main.h  wasm.sh
.github/workflows/: main.yml
Backend/Machine Learning/: CMakeLists.txt  ImageInput.cpp  RNN.cpp  bayes.cpp  bayes.h  glades.cpp  main.cpp  metanetwork.cpp  network.cpp  network.h
Backend/Machine Learning/DataObjects/: CMakeLists.txt  DataInput.cpp  ImageInput.cpp  ImageInput.h  NumberInput.cpp
Backend/Machine Learning/GMath/: CMakeLists.txt  OHE.cpp  OHE.h  cmatrix.cpp  gmath.cpp  gmath.h  pca.cpp  pca.h
Backend/Machine Learning/Networks/: CMakeLists.txt  RNN.cpp  bayes-optimizer.cpp  bayes-optimizer.h  bayes.cpp  bayes.h  metanetwork.cpp  network.cpp  network.h
Backend/Machine Learning/State/: CMakeLists.txt  LayerBuilder.cpp  LayerBuilder.h  NetworkState.cpp  Terminator.cpp  edge.cpp  layer.cpp  layer.h  node.cpp
Backend/Machine Learning/Structure/: CMakeLists.txt  hiddenlayerinfo.cpp  hiddenlayerinfo.h  inputlayerinfo.cpp  inputlayerinfo.h  layerinfo.cpp  nninfo.cpp  outputlayerinfo.cpp  outputlayerinfo.h
datasets/: dow_jones_index_test.csv  dow_jones_index_train.csv  pi1k.csv  timeseries.csv
datasets/images/: car_occupancy.pbm  car_original.ppm  chair.ppm  lightbulb.ppm
datasets/json/: test1.json  test2.json  test3.json  test4.json
derp/: README.md
include/Backend/Database/: GList.h
include/Backend/Networking/: socket.h
unit-tests/: CMakeLists.txt  main.cpp
unit-tests/Backend/Machine Learning/: CMakeLists.txt  bayes-optimizer-test.cpp  bayes-optimizer-test.h  bayes-test.cpp  bayes-test.h  loadsave-test.cpp  loadsave-test.h  modelsaveload-test.cpp  modelsaveload-test.h  nn-test.cpp  nn-test.h  ohe-test.cpp  ohe-test.h  pca-test.cpp  pca-test.h
unit-tests/database/models/xorgateText_trained.model/: edges  layers
unit-tests/database/neuralnetworks/: iris  iris.csv  mnist  mnist2  mnist3  xorgateText  xornet
unit-tests/datasets/: bayesOptTestLR  classifier2.csv  wordlist2.txt  xorgateText.csv
